--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
